Fix mobile layout issues

--- a/styles.css
+++ b/styles.css
@@ -64,8 +64,13 @@ body {
 
 @media screen and (max-width: 576px) {
 
+    .resume {
+        margin: 0 auto;
+    }
+
     .main-info,
-    .contact_info_container {
+    .contact_info_container,
+    .fh.fh--start {
         flex-direction: column;
     }
 
@@ -75,6 +80,12 @@ body {
 
     .experiences {
         margin-right: 0;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .resume {
+        margin: 0 auto;
     }
 }
 
